android: keep unpacker Java 17 compatible